// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxFormCreatableSelectInput expect to render without error 1`] = `
<Select
  additionalProp="Prop1"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  loadingMessage="Loading..."
  menuIsPortal={false}
  onChange={[MockFunction]}
  options={Array []}
  selectVariant="createable"
  selected="SELECTED_VALUE"
  showLessLabel="Show less"
  showMoreLabel="more"
  simpleValue={true}
  updatingMessage="Loading data..."
  value="SELECTED_VALUE"
/>
`;

exports[`ReduxFormTextArea expect to render without error 1`] = `
<TextArea
  additionalProp="Prop1"
  aria-label={null}
  className=""
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  isRequired={false}
  isValid={true}
  onChange={[MockFunction]}
  resizeOrientation="both"
  selected="SELECTED_VALUE"
  validated="default"
/>
`;

exports[`ReduxFormTextInput expect to render with defaultValue 1`] = `
<ForwardRef
  additionalProp="Prop1"
  defaultValue="Default Value"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
  value="Default Value"
/>
`;

exports[`ReduxFormTextInput expect to render without error 1`] = `
<ForwardRef
  additionalProp="Prop1"
  input={
    Object {
      "onChange": [MockFunction],
      "value": "Value",
    }
  }
  onChange={[MockFunction]}
  value="Value"
/>
`;
